--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="left-section">
             <ul id="cityList"></ul>
-            <div id="elementCount">Nr de elemente: 0</div>
+            <div id="elementCount">Nr de elem: 0</div>
 
         </div>
 
